josh: search bar covered the checkout button, should be fixed now

--- a/src/components/partials/navbars/Navbar/Navbar.css
+++ b/src/components/partials/navbars/Navbar/Navbar.css
@@ -53,7 +53,7 @@
 .nav-search {
   position: absolute;
   left: 25%;
-  width: 100%;
+  width: 55%;
   max-height: 100px;
   display: none;
 }
